# FrawR

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
public/: main.scss
rustlib/: Cargo.toml  LICENSE.txt  README.md
rustlib/src/: lib.rs
rustlib/src/entity/: entity.rs  mod.rs  moves.rs
rustlib/src/tile/: tile.rs
rustlib/src/world/: getters.rs  mod.rs  movement.rs  turns.rs  world.rs
src/: App.tsx  Login.tsx  index.css  main.tsx
src/components/: TileMap.tsx  TileRow.tsx  TileSpan.tsx
src/components/gameboard/: TileMap.tsx  TileRow.tsx  TileSpan.tsx
src/components/sidebar/: SideBar.tsx  StatusBar.tsx  StatusBarContainer.tsx
src/styles/: StatusBar.module.scss  main.scss
