[package]
name = "rustlib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.63"
log = "0.4.18"
noise = "0.8.2"
serde = { version = "1.0.163", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
serde_json = "1.0.96"
ts-rs = "6.2.1"
wasm-bindgen = "0.2.86"
wasm-logger = "0.2.0"
